# rust-decon-spf

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.github/ISSUE_TEMPLATE/: config.yml  mechanism-parse.md
examples/: build-new-spf.rs  build-spf-strict.rs  build-spf.rs  build_new_spf.rs  serde-demo.rs  trust-dns-demo-builder.rs  trust-dns-demo-spf.rs  trust-dns-demo.rs  trust-dns-resolver.rs
src/: helpers.rs  lib.rs  main.rs
src/core/: mod.rs  spf_regex.rs
src/dns/: mod.rs  mx.rs  soa.rs  spf.rs  spf_mechanism.rs
src/dns/spf/: kinds.rs  mechanism.rs  mod.rs  spf_a_mechanism_test.rs  spf_mx_mechanism_test.rs  spf_test.rs
src/mechanism/: errors.rs  kind.rs  mechanism.rs  mechanismimpl.rs  mod.rs  parsedmechanism.rs  qualifier.rs
src/mechanism/tests/: a.rs  build.rs  exists.rs  mod.rs  mx.rs  ptr.rs
src/mechanism/tests/fromstr/: a.rs  include.rs  invalid.rs  ipnetwork.rs  mod.rs  mx.rs  ptr.rs  redirect.rs  strictdns.rs  string.rs
src/mechanism/tests/mechanism/: build.rs  create.rs  mod.rs
src/mechanism/tests/mechanism/capture/: a.rs  exists.rs  mx.rs  ptr.rs
src/mechanism/tests/mechanism/fromstr/: a.rs  all.rs  exists.rs  include.rs  invalid.rs  ipnetwork.rs  mod.rs  mx.rs  ptr.rs  redirect.rs  strictdns.rs
src/mechanism/tests/mechimpl/: build.rs
src/mechanism/tests/mechimpl/capture/: a.rs  exists.rs  mod.rs  mx.rs  ptr.rs
src/mechanism/tests/mechimpl/fromstr/: invalid.rs  ipnetwork.rs
src/mechanism/tests/mechimpl/fromstr/a/: mod.rs
src/mechanism/tests/mechimpl/fromstr/all/: mod.rs
src/mechanism/tests/mechimpl/fromstr/exists/: mod.rs
src/mechanism/tests/mechimpl/fromstr/include/: mod.rs
src/mechanism/tests/mechimpl/fromstr/mx/: mod.rs
src/mechanism/tests/mechimpl/fromstr/ptr/: mod.rs
src/mechanism/tests/mechimpl/fromstr/redirect/: mod.rs
src/mechanism/tests/parsedmechanism/: mod.rs
src/spf/: builder.rs  errors.rs  helpers.rs  kinds.rs  mechanism.rs  mod.rs  qualifier.rs  string.rs
src/spf/errors/: mod.rs
src/spf/mechanism/: builder.rs  conv_traits.rs  errors.rs  kind.rs  mod.rs  parsedmechanism.rs  qualifier.rs
src/spf/mechanism/tests/: mod.rs
src/spf/mechanism/tests/fromstr/: a.rs  all.rs  exists.rs  include.rs  invalid.rs  ipnetwork.rs  mx.rs  ptr.rs  redirect.rs  strictdns.rs
src/spf/tests/: a.rs  a_mechanism.rs  battery.rs  construct.rs  display.rs  exists.rs  include.rs  ip4.rs  ip6.rs  mod.rs  mx.rs  mx_mechanism.rs  parse.rs  ptr.rs  serde.rs  spf.rs  spf_a_mechanism_test.rs  spf_mx_mechanism_test.rs  spf_test.rs  warndns.rs
src/spf/tests/builder/: a.rs  battery.rs  construct.rs  display.rs  exists.rs  include.rs  ip4.rs  ip6.rs  mod.rs  mx.rs  parse.rs  ptr.rs  serde.rs
src/spf/tests/mechanisms/: a.rs  build.rs  exists.rs  mod.rs  mx.rs  networks.rs  ptr.rs  strings.rs
src/spf/tests/spf/: a.rs  a_capture.rs  a_parse.rs  as_spf.rs  construct.rs  exists.rs  include.rs  ip4.rs  ip6.rs  mod.rs  mx.rs  mx_capture.rs  mx_parse.rs  parse.rs  ptr.rs  ptr_capture.rs  ptr_parse.rs  serde.rs
src/spf/tests/string/: mod.rs
src/spf/validate/: builder_results.rs  mod.rs  validate_builder.rs  validate_string.rs  warn.rs
src/spf/validate/tests/: mod.rs  string.rs
src/tests/mechanisms/: mod.rs
src/tests/spf/: ip4.rs
