[package]
name = "decon-spf"
version = "0.3.0"
authors = ["Adam.S <Bas-Man@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

description = """
This is a simple tool that allows you to deconstruct an existing SPF record that might be
retreived in a normal DNS TXT lookup.
With version 0.2.0 you can now also construct a new Spf record.
"""

documentation = "https://docs.rs/decon-spf"
#homepage = ""
repository = "https://github.com/Bas-man/rust-decon-spf"

readme = "README.md"

keywords = ["dns", "spf"]
categories = ["network-programming", "parser-implementations"]

license = "MIT"

[lib]
name = "decon_spf"
path = "src/lib.rs"

[[example]]
name = "trust-dns-demo"
path = "examples/trust-dns-demo.rs"

[[example]]
name = "build-spf"
path = "examples/build-spf.rs"
required-features = ["spf2"]

[[example]]
name = "build-spf-strict"
path = "examples/build-spf-strict.rs"
required-features = ["strict-dns", "spf2"]

[[example]]
name = "serde-demo"
path = "examples/serde-demo.rs"
required-features = ["serde", "spf2"]

[dependencies]
ipnetwork = "0.20.0"
regex = "1.10.2"
lazy_static = "1.4.0"
addr = { version = "0.15.6", optional = true }
serde = { version = "1.0.196", features = ["derive"], optional = true }

[dev-dependencies]
trust-dns-resolver = "0.23.2"
serde_json = { version = "1.0.113" }

[features]
default = ["ptr"]
strict-dns = ["dep:addr"]
serde = ["dep:serde"]
spf2 = []
ptr = []

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
